# JSON-Schema-Test-Suite

./: .editorconfig  .gitignore  .prettierrc.toml  .travis.yml  CONTRIBUTING.md  Dockerfile  HARNESS_README.md  LICENSE  Makefile  NODE-README.md  README.md  annotation_harness.py  check_validation_suite.py  composer.json  github-issue-empty-null.md  github-issue.md  github_comment_draft.md  index.js  json_tests_workflow.py  output-test-schema.json  package-lock.json  package.json  pyproject.toml  test-schema.json  test_annotation_harness.py  tox.ini  validation-test-schema.json
.github/instructions/: exclusiveMinMax-issue.md
.github/workflows/: annotate_specification.yml  annotation_workflow.yml  apply-test-ids.yml  ci.yml  generate-test-ids.yml  json_tests_workflow.py  show_specification_annotations.yml
annotations/: README.md  assertion.schema.json  test.schema.json
annotations/tests/: applicators.json  content.json  core.json  format.json  (+4 more)
failures/: README.md
lib/: index.js  index.spec.js
output-tests/: README.md
remotes/: integer-draft4.json  integer-draft6.json  integer.json  locationIndependentIdentifier.json  name-defs.json  name.json  subSchemas-defs.json  subSchemas-ids.json  subSchemas.json
report/: Dockerfile  README.md  docker-compose.yml  implementations.json  report-template.yml  run-report.sh  run-suite.sh  run.sh
scripts/: add-test-ids.js  check-test-ids.js  generate-ids-for.js  load-remotes.js  normalize.js
test/: test.js
test-generator/: prototype-safe.js
validation/: check_validation_suite.py  validation-test-schema.json
(+595 files in other folders)
